--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,11 @@
     "$": true
   },
   "rules": {
-    "no-unused-vars": ["warn", { "args": "none" }]
+    "no-unused-vars": [
+      "warn",
+      {
+        "args": "none"
+      }
+    ]
   }
 }
