--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {},
   "scripts": {
-    "build": "NODE_ENV=development rollup --config",
-    "build:production": "NODE_ENV=production rollup --config"
+    "build": "rollup --config --environment BUILD:development",
+    "build:production": "rollup --config --environment BUILD:production",
+    "watch": "rollup --config --watch --environment BUILD:development"
   }
 }
