--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
-    "rollup": "^1.7.3",
-    "rollup-plugin-babel": "^4.3.2",
     "eslint": "^5.15.3",
     "eslint-config-jquery": "^1.0.1",
+    "rollup": "^1.7.3",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-uglify": "^6.0.2"
   },
   "main": "src/form-pages.js",
@@ -19,6 +21,6 @@
   "scripts": {
     "build": "rollup --config --environment BUILD:development",
     "build:production": "rollup --config --environment BUILD:production",
-    "watch": "rollup --config --watch --environment BUILD:development"
+    "watch": "rollup --config --watch --environment BUILD:development,WATCH"
   }
 }
