--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
+    "cssnano": "^4.1.10",
     "eslint": "^5.15.3",
     "eslint-config-jquery": "^1.0.1",
+    "postcss": "^7.0.14",
     "rollup": "^1.7.3",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-sass": "^1.1.0",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-uglify": "^6.0.2"
   },
