Added JSDoc package to generate the documentation.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cssnano": "^4.1.10",
     "eslint": "^5.15.3",
     "eslint-config-jquery": "^1.0.1",
+    "jsdoc": "3.5.5",
     "postcss": "^7.0.14",
     "rollup": "^1.7.3",
     "rollup-plugin-babel": "^4.3.2",
@@ -24,6 +25,7 @@
   "scripts": {
     "build": "rollup --config --environment BUILD:development",
     "build:production": "rollup --config --environment BUILD:production",
-    "watch": "rollup --config --watch --environment BUILD:development,WATCH"
+    "watch": "rollup --config --watch --environment BUILD:development,WATCH",
+    "generate:doc": "jsdoc ./src/form-pages.js"
   }
 }
