--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
+    "@pixi/jsdoc-template": "^2.4.2",
     "cssnano": "^4.1.10",
     "eslint": "^5.15.3",
     "eslint-config-jquery": "^1.0.1",
@@ -23,10 +24,13 @@
   },
   "main": "src/form-pages.js",
   "dependencies": {},
+  "peerDependencies": {
+    "jquery": "> 2"
+  },
   "scripts": {
     "build": "rollup --config --environment BUILD:development",
     "build:production": "rollup --config --environment BUILD:production",
     "watch": "rollup --config --watch --environment BUILD:development,WATCH",
-    "generate:doc": "jsdoc ./src/form-pages.js ./src/utils.js --configure .jsdoc.json"
+    "generate:doc": "jsdoc ./src/form-pages.js ./src/utils.js ./README.md --configure .jsdoc.json"
   }
 }
