--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
-    "@pixi/jsdoc-template": "^2.4.2",
     "cssnano": "^4.1.10",
     "eslint": "^5.15.3",
     "eslint-config-jquery": "^1.0.1",
+    "foodoc": "^0.0.9",
     "jsdoc": "3.5.5",
-    "minami": "^1.2.3",
     "postcss": "^7.0.14",
     "rollup": "^1.7.3",
     "rollup-plugin-babel": "^4.3.2",
