Renamed JSDoc config file

--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "build": "rollup --config --environment BUILD:development",
     "build:production": "rollup --config --environment BUILD:production",
     "watch": "rollup --config --watch --environment BUILD:development,WATCH",
-    "generate:doc": "jsdoc ./src/form-pages.js ./src/utils.js ./README.md --configure .jsdoc.json"
+    "generate:doc": "jsdoc ./src/form-pages.js ./src/utils.js ./README.md --configure jsdoc.json"
   }
 }
