--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "babel-jest": "^24.7.1",
     "cssnano": "^4.1.10",
     "eslint": "^5.15.3",
     "eslint-config-jquery": "^1.0.1",
     "foodoc": "^0.0.9",
+    "jest": "^24.7.1",
     "jsdoc": "3.5.5",
+    "nightmare": "^3.0.1",
     "postcss": "^7.0.14",
     "rollup": "^1.7.3",
     "rollup-plugin-babel": "^4.3.2",
@@ -30,6 +33,7 @@
     "build": "rollup --config --environment BUILD:development",
     "build:production": "rollup --config --environment BUILD:production",
     "watch": "rollup --config --watch --environment BUILD:development,WATCH",
-    "generate:doc": "jsdoc ./src/form-pages.js ./src/utils.js ./README.md --configure jsdoc.json"
+    "generate:doc": "jsdoc ./src/form-pages.js ./src/utils.js ./README.md --configure jsdoc.json",
+    "test": "BABEL_ENV=test jest"
   }
 }
