--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,21 @@
 {
     "presets": [
-        ["@babel/preset-env"]
-    ]
+        [
+            "@babel/preset-env"
+        ]
+    ],
+    "env": {
+        "test": {
+            "presets": [
+                [
+                    "@babel/preset-env",
+                    {
+                        "targets": {
+                            "node": "current",
+                        },
+                    },
+                ],
+            ],
+        }
+    }
 }
