Dropped Nightmare to adopt Puppeteer.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "foodoc": "^0.0.9",
     "jest": "^24.7.1",
     "jsdoc": "3.5.5",
-    "nightmare": "^3.0.1",
     "postcss": "^7.0.14",
+    "puppeteer": "^1.14.0",
     "rollup": "^1.7.3",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-livereload": "^1.0.0",
