Configured ESLint for the tests.

--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^24.7.1",
     "cssnano": "^4.1.10",
-    "eslint": "^5.15.3",
+    "eslint": "^5.16.0",
+    "eslint-config-fbjs": "^3.1.0",
     "eslint-config-jquery": "^1.0.1",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-flowtype": "^3.5.1",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "foodoc": "^0.0.9",
     "jest": "^24.7.1",
     "jsdoc": "3.5.5",
