--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "foodoc": "^0.0.9",
+    "husky": "^1.3.1",
     "jest": "^24.7.1",
     "jsdoc": "3.5.5",
     "postcss": "^7.0.14",
@@ -41,5 +42,11 @@
     "watch": "rollup --config --watch --environment BUILD:development,WATCH",
     "generate:doc": "jsdoc ./src/form-pages.js ./src/utils.js ./README.md --configure jsdoc.json",
     "test": "BABEL_ENV=test jest"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "eslint src/*.js --fix",
+      "pre-push": "yarn test"
+    }
   }
 }
