--- a/.babelrc
+++ b/.babelrc
@@ -11,7 +11,7 @@
                     "@babel/preset-env",
                     {
                         "targets": {
-                            "node": "current",
+                            "node": "current"
                         },
                     },
                 ],
