--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-sass": "^1.1.0",
     "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-strip": "^1.2.1",
     "rollup-plugin-uglify": "^6.0.2"
   },
   "main": "dist/form-pages.js",
